--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -26,7 +26,11 @@ jobs:
       - name: Set ENV variables
         run: |
           echo "PRISMIC_REPO_NAME=${{ secrets.PRISMIC_REPO_NAME }}" > .env.production
+          echo "PRISMIC_ACCESS_TOKEN=${{ secrets.PRISMIC_ACCESS_TOKEN }}" >> .env.production
           echo "PRISMIC_CUSTOM_TYPES_API_TOKEN=${{ secrets.PRISMIC_CUSTOM_TYPES_API_TOKEN }}" >> .env.production
+          echo "AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}" >> .env.production
+          echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> .env.production
+          echo "WEBSITE_HOST_NAME=${{ secrets.WEBSITE_HOST_NAME }}" >> .env.production
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
